--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "byphp/tron-api",
     "description": "A PHP API for interacting with Tron (Trx)",
     "license": "MIT",
-    "type":   "library",
+    "type": "library",
     "homepage": "https://github.com/fenguoz/tron-api",
     "authors": [
         {
@@ -16,18 +16,16 @@
         "tron-api",
         "tron-rest-api"
     ],
-
     "require": {
         "php": ">=8.0",
         "fenguoz/data-types": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "fenguoz/web3.php": "^1.0",
-        "kornrunner/secp256k1": "^0.3",
+        "byphp/secp256k1": "^1.0",
         "simplito/elliptic-php": "^1.0",
         "ext-json": "*",
         "ext-bcmath": "*"
     },
-
     "require-dev": {
         "phpunit/phpunit": "~9.0"
     },
@@ -36,17 +34,14 @@
             "IEXBase\\TronAPI\\": "src"
         }
     },
-
     "autoload-dev": {
         "psr-4": {
             "IEXBase\\TronAPI\\Test\\": "tests"
         }
     },
-
     "config": {
         "sort-packages": true
     },
-
     "minimum-stability": "dev",
     "prefer-stable": true
 }
